--- a/ubskin_web_django/templates/ad/a_campaigns_manage.html
+++ b/ubskin_web_django/templates/ad/a_campaigns_manage.html
@@ -5,10 +5,8 @@
 {% endblock %}
 
 {% block title %}
-<ul class="nav nav-tabs">
-    <li role="presentation" class="active"><a href="{% url 'campaigns_manage' %}">活动管理</a></li>
-    <li role="presentation"><a href="">活动商品管理</a></li>
-</ul>  
+<h1>活动管理</h1>
+
 {% endblock %}
 {% block page_header %}
 <ol class="breadcrumb">
