--- a/ubskin_web_django/templates/ad/a_campaigns_manage.html
+++ b/ubskin_web_django/templates/ad/a_campaigns_manage.html
@@ -38,7 +38,7 @@
     <div class="col-md-4">
         <a href="{% url 'add_campaign' %}" class="btn btn-info" >添加活动 <span class="glyphicon glyphicon-plus"></span></a>
         <button type="button" class="btn btn-default choose_datas">选择全部<span class="glyphicon glyphicon-saved"></span></button>
-        <button type="button" class="btn btn-danger delete_brands" >删除<span class="glyphicon glyphicon-trash"></span></button>
+        <button type="button" class="btn btn-danger delete_datas" >删除<span class="glyphicon glyphicon-trash"></span></button>
     </div>
 </div>
 {% endblock %}
@@ -71,7 +71,7 @@
             {% for i in data_list %}
                 <div class="col-md-4 data_list" >
                     <div class="thumbnail">
-                        <input type="checkbox">
+                        <input type="checkbox" item-id={{i.campaign_id}}>
                         <img src="{% build_photo_url i.campaigns_photo_id %}" alt="..." style="width: 150px;height: 150px;">
                         <div class="caption">
                             <a href="{% url 'editor_campaign' %}?data_id={{i.campaign_id}}&back_url={{request.get_full_path}}"><strong>{% str_step i.campaign_name 13 %}</strong></a>
@@ -117,20 +117,20 @@
             }
             
         })
-        $('.delete_brands').click(function(){
+        $('.delete_datas').click(function(){
             var $item_list = $('.data_list')
-            var brand_ids_list = []
+            var data_id_list = []
             $item_list.each(function(index, item){
                 var f =  $(item).children().find('input[type="checkbox"]')
                 var is_checked = $(f).prop('checked')
                 if(is_checked){
-                    brand_ids_list.push($(f).attr('item-id'))
+                    data_id_list.push($(f).attr('item-id'))
                 }
             })
-            if(brand_ids_list.length>0){
+            if(data_id_list.length>0){
                 $.post(
-                    '{% url "delete_brands" %}',
-                    {'brand_ids_list': brand_ids_list, 'csrfmiddlewaretoken': getCookie('csrftoken')},
+                    '{% url "delete_campaigns" %}',
+                    {'data_id_list': data_id_list, 'csrfmiddlewaretoken': getCookie('csrftoken')},
                     function(value){
                         if(value.status == 'success'){
                             location.reload()
