--- a/ubskin_web_django/templates/item/a_add_item.html
+++ b/ubskin_web_django/templates/item/a_add_item.html
@@ -111,6 +111,19 @@
             </select>
         </div>
         <div class="form-group">
+            <label class="control-label">设置活动:</label>
+            <select name="campaign_id" class="form-control">
+                <option value="" selected>--选择--</option>
+                {% for i in campaigns_dict %}
+                    {% if form_data and form_data.campaign_id is not None and i.campaign_id == form_data.campaign_id %}
+                        <option value="{{ i.campaign_id }}" selected>{{ i.campaign_name }}</option>
+                    {% else %}
+                        <option value="{{ i.campaign_id }}">{{ i.campaign_name }}</option>
+                    {% endif %}
+                {% endfor %}
+            </select>
+        </div>
+        <div class="form-group">
             <label class="control-label">适用人群:</label>
             <input type="text" class="form-control" name="for_people" value="{% if form_data.for_people %}{{ form_data.for_people }}{% endif %}"> 
         </div>
