--- a/ubskin_web_django/templates/item/a_item_manage.html
+++ b/ubskin_web_django/templates/item/a_item_manage.html
@@ -15,28 +15,58 @@
 
 {% block content_title %}
 
-<div class="row">
-    <div class="col-md-8">
-        <div "row">
-            <div class="col-md-8">
-                <form action="" method="GET" class="search_input">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="搜索商品名称" name="search_value" value="{{ search_value }}">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default search_input_btn" type="submit">搜索</button>
-                        </span>
-                    </div><!-- /input-group -->
-                </form>
-            </div>
-            <div class="col-md-4">
+<div class="row" style="padding: 15px">
+    <form action="" method="GET" class="filter_form">
+        <div class="col-md-8">
+            <div "row">
+                <div class="col-md-4" style="padding: 0">
+                    <select name="categorie_id" id="" class="form-control filter_select">
+                        <option value="">分类</option>
+                        {% for i in categories_select_dict %}
+                            {% str_and_digital i.categorie_id form_data.categorie_id as bool_value %}
+                            {% if bool_value %}
+                                <option value="{{ i.categorie_id }}" selected>{{ i.categorie_name }}</option>
+                            {% else %}
+                                <option value="{{ i.categorie_id }}">{{ i.categorie_name }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
 
+                </div>
+                <div class="col-md-4" style="padding: 0">
+                    <select name="campaign_id" class="form-control filter_select">
+                        <option value="">活动</option>
+                        {% for i in campaigns_select_dict %}
+                            {% str_and_digital i.campaign_id form_data.campaign_id as bool_value2 %}
+                            {% if bool_value2 %}
+                                <option value="{{ i.campaign_id }}" selected>{{ i.campaign_name }}</option>
+                            {% else %}
+                                <option value="{{ i.campaign_id }}">{{ i.campaign_name }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="col-md-4">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="搜索商品名称" name="search_value" value="{{ form_data.search_value }}">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default search_input_btn" type="submit">搜索</button>
+                    </span>
+                </div><!-- /input-group -->
+        </div>
+    </form>
+</div>
+<br>
+<div class="row" style="padding: 15px">
+    <div class="col-md-8">
+
+    </div> 
     <div class="col-md-4">
-        <a href="{% url 'add_item' %}" class="btn btn-info add_item_btn" >添加商品 <span class="glyphicon glyphicon-plus"></span></a>
-        <button type="button" class="btn btn-default choose_item">选择全部<span class="glyphicon glyphicon-saved"></span></button>
-        <button type="button" class="btn btn-danger delete_item" >删除<span class="glyphicon glyphicon-trash"></span></button>
+            <a href="{% url 'add_item' %}" class="btn btn-info add_item_btn" >添加商品 <span class="glyphicon glyphicon-plus"></span></a>
+            <button type="button" class="btn btn-default choose_item">选择全部<span class="glyphicon glyphicon-saved"></span></button>
+            <button type="button" class="btn btn-danger delete_item" >删除<span class="glyphicon glyphicon-trash"></span></button>
     </div>
 </div>
 {% endblock %}
@@ -145,7 +175,6 @@
         $('.edit_item').click(get_edit_item_info)
         $('.image_manage').click()
     })
-
     function delete_item(){
         var $item_list = $('.item_list')
         var item_id_list = []
@@ -171,6 +200,11 @@
             )
         }
     }
+    $('.filter_form .filter_select').change(
+        function(){
+            $('.filter_form').submit()
+        }
+    )
     
     </script>
 {% endblock %}
