--- a/ubskin_web_django/templates/order/a_order_manage.html
+++ b/ubskin_web_django/templates/order/a_order_manage.html
@@ -21,6 +21,7 @@
     <li role="presentation" class="active"><a href="{% url 'order_manage' %}">商品出库表</a></li>
     <li role="presentation"><a href="{% url 'item_qr_Code_manage' %}">物码查询</a></li>
     <li role="presentation"><a href="{% url 'recv_manage' %}">收货方管理</a></li>
+    <li role="presentation"><a href="{% url 'batch_qr_code_manage' %}">二维码生成</a></li>
 </ul>           
 {% endblock %}
 {% block page_header %}
