--- a/ubskin_web_django/templates/order/a_stock_batch.html
+++ b/ubskin_web_django/templates/order/a_stock_batch.html
@@ -260,7 +260,7 @@ $(function() {
                         codes_dict[curr_item_barcode].push(barcode);
                         build_info_div();
                     }else{
-                        alert('当前二维码已经录入')
+                        alert(value.message)
                     }
                 }
             )
