--- a/ubskin_web_django/templates/item/a_add_brand.html
+++ b/ubskin_web_django/templates/item/a_add_brand.html
@@ -59,7 +59,7 @@
       </div><!-- /.box-body -->
 
       <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">提交</button>
       </div>
     </form>
   </div>
