--- a/ubskin_web_django/templates/item/a_add_categorie.html
+++ b/ubskin_web_django/templates/item/a_add_categorie.html
@@ -44,7 +44,7 @@
       </div><!-- /.box-body -->
 
       <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">提交</button>
       </div>
     </form>
   </div>
