--- a/ubskin_web_django/templates/member/a_member_manage.html
+++ b/ubskin_web_django/templates/member/a_member_manage.html
@@ -90,7 +90,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <div "row">
+        <div class="row">
             <div class="col-md-8">
                 <form action="" method="GET" class="search_input">
                 <div class="input-group">
