--- a/ubskin_web_django/templates/item/a_categorie_manage.html
+++ b/ubskin_web_django/templates/item/a_categorie_manage.html
@@ -51,12 +51,12 @@
                 {% if i.is_hot is not None %}
                     {% if i.is_hot is not None and i.c %}
                         {% if form_data.is_hot is not None %}
-                            <a href="{% url 'categorie_manage' %}?page={{ current_page }}&is_hot={{ i.is_hot }}" class="list-group-item active">
+                            <a href="{% url 'categorie_manage' %}?is_hot={{ i.is_hot }}" class="list-group-item active">
                                     <span class="badge">{{ i.c }}</span>
                                     热门分类
                             </a>
                         {% else %}
-                            <a href="{% url 'categorie_manage' %}?page={{ current_page }}&is_hot={{ i.is_hot }}" class="list-group-item">
+                            <a href="{% url 'categorie_manage' %}?is_hot={{ i.is_hot }}" class="list-group-item">
                                     <span class="badge">{{ i.c }}</span>
                                     热门分类
                             </a>
@@ -64,12 +64,12 @@
                     {% endif %}
                 {% else %}
                     {% if form_data.categorie_type == i.categorie_type %}
-                        <a href="{% url 'categorie_manage' %}?page={{ current_page }}&categorie_type={{ i.categorie_type }}" class="list-group-item active">
+                        <a href="{% url 'categorie_manage' %}?categorie_type={{ i.categorie_type }}" class="list-group-item active">
                                 <span class="badge">{{ i.c }}</span>
                                 {{ i.categorie_type }}
                         </a>
                     {% else %}
-                        <a href="{% url 'categorie_manage' %}?page={{ current_page }}&categorie_type={{ i.categorie_type }}" class="list-group-item">
+                        <a href="{% url 'categorie_manage' %}?categorie_type={{ i.categorie_type }}" class="list-group-item">
                                 <span class="badge">{{ i.c }}</span>
                                 {{ i.categorie_type }}
                         </a>
